# shinobi

./: CMakeLists.txt  LICENSE  README.md  driver.cc  foo.x  if-with-statement.x
.github/: FUNDING.yml
.github/workflows/: CI.yml
include/: ast.h  lexer.h  parser.h
src/: ast.cc  lexer.cc  parser.cc
test/: test-lexer-tokens.cc
test/fixtures/: assignment.x  function.x  if.x  let.x  line-comment.x  string.x  tokens.x
